VOL-104: Ensure that long recipe titles wrap nicely, with all lines left-aligned and the share/fave buttons accessible.

--- a/veganKickstart/app/styles/shapes.scss
+++ b/veganKickstart/app/styles/shapes.scss
@@ -40,6 +40,11 @@
   }
 }
 
+.darkGrayBar .actions {
+  position: absolute;
+  right: 0;
+}
+
 .darkGrayBar .glyphicon {
   top: 3px;
 }
